Neu hinzugefügt: - Promiletrend Graph  - Anzeigecirle für 0,5 Promille mit Puls Animation  - Bugfix mit Uhrzeiteingabe und nicht aktualisiernder Promillezahl beim 1. Klick auf Berechnen

--- a/app.json
+++ b/app.json
@@ -14,7 +14,11 @@
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nicolas.promillerechner",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "package": "com.nicolas.promillerechner",
