--- a/app.json
+++ b/app.json
@@ -5,11 +5,6 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "splash": {
-      "image": "./assets/images/splashscreen.png",
-      "resizeMode": "cover",
-      "backgroundColor": "#0f3460"
-    },
     "scheme": "promillerechner",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -35,7 +30,19 @@
     },
     "plugins": [
       "expo-font",
-      "expo-router"
+      "expo-router",
+      [
+        "expo-splash-screen",
+        {
+          "image": "./assets/images/splashscreen.png",
+          "backgroundColor": "#0f3460",
+          "imageResizeMode": "cover",
+          "dark": {
+            "image": "./assets/images/splashscreen-dark.png",
+            "backgroundColor": "#0f3460"
+          }
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
