--- a/app.json
+++ b/app.json
@@ -11,7 +11,7 @@
     "newArchEnabled": true,
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nicolas.promillerechner",
+      "bundleIdentifier": "io.nicode.promillerechner",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
       }
